ColorsGame_Module : Specs Finish
Signed-off-by: Nittaya <nittaya@perfenterprise.com>

--- a/src/CasinovaAll/Modules/Colors/TheS.Casinova.Colors.Models/TheS.Casinova.Colors.Models.csproj
+++ b/src/CasinovaAll/Modules/Colors/TheS.Casinova.Colors.Models/TheS.Casinova.Colors.Models.csproj
@@ -44,7 +44,7 @@
     <Compile Include="Models\GamePlayInformation.md.cs" />
     <Compile Include="Models\GameRoundConfiguration.cs" />
     <Compile Include="Models\GameRoundConfiguration.md.cs" />
-    <Compile Include="Models\GameRoundInformation..md.cs" />
+    <Compile Include="Models\GameRoundInformation.md.cs" />
     <Compile Include="Models\PlayerActionInformation.cs" />
     <Compile Include="Models\GamePlayInformation.cs" />
     <Compile Include="Models\GameRoundInformation.cs" />
