--- a/src/CasinovaAll/Specs/TheS.Casinova.MagicNine.WebExecutors.Specs/TheS.Casinova.MagicNine.WebExecutors.Specs.csproj
+++ b/src/CasinovaAll/Specs/TheS.Casinova.MagicNine.WebExecutors.Specs/TheS.Casinova.MagicNine.WebExecutors.Specs.csproj
@@ -41,10 +41,20 @@
     <Reference Include="PerfEx.Infrastructure.Advanced">
       <HintPath>..\..\..\..\lib\PerfEx.Infrastructure.Advanced.dll</HintPath>
     </Reference>
+    <Reference Include="PerfEx.Infrastructure.Containers.StructureMapAdapter">
+      <HintPath>..\..\..\..\lib\PerfEx.Infrastructure.Containers.StructureMapAdapter.dll</HintPath>
+    </Reference>
     <Reference Include="Rhino.Mocks">
       <HintPath>..\..\..\..\lib\Rhino.Mocks.dll</HintPath>
     </Reference>
+    <Reference Include="SpecFlowAssist">
+      <HintPath>..\..\..\..\lib\SpecFlowAssist.dll</HintPath>
+    </Reference>
+    <Reference Include="StructureMap">
+      <HintPath>..\..\..\..\lib\StructureMap.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -98,6 +108,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>StopAutoBetFeature.feature</DependentUpon>
     </Compile>
+    <Compile Include="WebExecutors\UnitSpecs\SingleBetExecutorSpecs.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Modules\Chat\TheS.Casinova.Chat.BackProviders\TheS.Casinova.Chat.BackProviders.csproj">
