--- a/src/CasinovaAll/Silverlight.Specs/TheS.Casinova.Colors.Specs.Silverlight/TheS.Casinova.Colors.Specs.Silverlight.csproj
+++ b/src/CasinovaAll/Silverlight.Specs/TheS.Casinova.Colors.Specs.Silverlight/TheS.Casinova.Colors.Specs.Silverlight.csproj
@@ -79,8 +79,12 @@
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTesting.Silverlight">
       <HintPath>$(MSBuildExtensionsPath)\..\Microsoft SDKs\Silverlight\v4.0\Toolkit\Apr10\Testing\Microsoft.VisualStudio.QualityTools.UnitTesting.Silverlight.dll</HintPath>
     </Reference>
-    <Reference Include="PerfEx.Infrastructure.Silverlight, Version=1.7910.1008.999, Culture=neutral, processorArchitecture=MSIL" />
-    <Reference Include="PerfEx.Infrastructure.Silverlight.Advanced, Version=1.7910.1008.999, Culture=neutral, processorArchitecture=MSIL" />
+    <Reference Include="PerfEx.Infrastructure.Silverlight">
+      <HintPath>..\..\..\..\lib\PerfEx.Infrastructure.Silverlight.dll</HintPath>
+    </Reference>
+    <Reference Include="PerfEx.Infrastructure.Silverlight.Advanced">
+      <HintPath>..\..\..\..\lib\PerfEx.Infrastructure.Silverlight.Advanced.dll</HintPath>
+    </Reference>
     <Reference Include="Rhino.Mocks 3.5.Silverlight">
       <HintPath>..\..\..\..\lib\Rhino.Mocks 3.5.Silverlight.dll</HintPath>
     </Reference>
