Add BetLog model Implement MagicNineServiceAdapter into GamePlayViewModel
Signed-off-by: Sakul Jaruthanaset <miolynet@perfenterprise.com>

--- a/src/CasinovaAll/Silverlights/TheS.Casinova.MagicNine.Silverlight/TheS.Casinova.MagicNine.Silverlight.csproj
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.MagicNine.Silverlight/TheS.Casinova.MagicNine.Silverlight.csproj
@@ -102,6 +102,7 @@
     </Compile>
     <Compile Include="MagicNine\GameApplicationInformation.cs" />
     <Compile Include="MagicNine\Models\BetdataInfo.cs" />
+    <Compile Include="MagicNine\Models\BetLog.cs" />
     <Compile Include="MagicNine\Models\GameTable.cs" />
     <Compile Include="MagicNine\Models\WinnerInfo.cs" />
     <Compile Include="MagicNine\Popups\BetData.xaml.cs">
