commit การรวมงานของตุ่มกับพี่แขก ในส่วนของ profile

--- a/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
+++ b/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
@@ -157,13 +157,17 @@
     <Content Include="Areas\KnowledgeCenter\Views\KnowledgeCenter\SubmenuVideo.ascx" />
     <Content Include="Areas\Map\Views\Map\Index.aspx" />
     <Content Include="Areas\Profile\Views\Profile\Archievement.aspx" />
+    <Content Include="Areas\Profile\Views\Profile\Comment_Archeivement.ascx" />
+    <Content Include="Areas\Profile\Views\Profile\Compare_Archeivement.ascx" />
+    <Content Include="Areas\Profile\Views\Profile\Filter.ascx" />
+    <Content Include="Areas\Profile\Views\Profile\FriendList.ascx" />
     <Content Include="Areas\Profile\Views\Profile\index_comment.ascx" />
     <Content Include="Areas\Profile\Views\Profile\Blog.aspx" />
-    <Content Include="Areas\Profile\Views\Profile\Friends.aspx" />
     <Content Include="Areas\Profile\Views\Profile\Inbox.aspx" />
     <Content Include="Areas\Profile\Views\Profile\Index.aspx" />
     <Content Include="Areas\Profile\Views\Profile\Photo.aspx" />
     <Content Include="Areas\Profile\Views\Profile\photocomment.ascx" />
+    <Content Include="Areas\Profile\Views\Profile\Popup_Comment_Archeivement.ascx" />
     <Content Include="Areas\Profile\Views\Profile\Profile.aspx" />
     <Content Include="Areas\Profile\Views\Profile\SubMenu.ascx" />
     <Content Include="Areas\Scholarship\Views\Scholarship\AdvanceSearch.ascx" />
@@ -231,6 +235,22 @@
     <Content Include="Content\profile\LD.png" />
     <Content Include="Content\profile\loader.gif" />
     <Content Include="Content\profile\opa75.png" />
+    <Content Include="Content\profile\pic_friend\1.png" />
+    <Content Include="Content\profile\pic_friend\10.png" />
+    <Content Include="Content\profile\pic_friend\11.png" />
+    <Content Include="Content\profile\pic_friend\12.png" />
+    <Content Include="Content\profile\pic_friend\13.png" />
+    <Content Include="Content\profile\pic_friend\14.png" />
+    <Content Include="Content\profile\pic_friend\15.png" />
+    <Content Include="Content\profile\pic_friend\16.png" />
+    <Content Include="Content\profile\pic_friend\2.png" />
+    <Content Include="Content\profile\pic_friend\3.png" />
+    <Content Include="Content\profile\pic_friend\4.png" />
+    <Content Include="Content\profile\pic_friend\5.png" />
+    <Content Include="Content\profile\pic_friend\6.png" />
+    <Content Include="Content\profile\pic_friend\7.png" />
+    <Content Include="Content\profile\pic_friend\8.png" />
+    <Content Include="Content\profile\pic_friend\9.png" />
     <Content Include="Content\profile\thumbs\t1.jpg" />
     <Content Include="Content\profile\thumbs\t10.jpg" />
     <Content Include="Content\profile\thumbs\t11.jpg" />
