--- a/src/CasinovaAll/Silverlight.Specs/TheS.Casinova.MagicNine.Specs.Silverlight/TheS.Casinova.MagicNine.Specs.Silverlight.csproj
+++ b/src/CasinovaAll/Silverlight.Specs/TheS.Casinova.MagicNine.Specs.Silverlight/TheS.Casinova.MagicNine.Specs.Silverlight.csproj
@@ -79,6 +79,18 @@
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTesting.Silverlight">
       <HintPath>$(MSBuildExtensionsPath)\..\Microsoft SDKs\Silverlight\v4.0\Toolkit\Apr10\Testing\Microsoft.VisualStudio.QualityTools.UnitTesting.Silverlight.dll</HintPath>
     </Reference>
+    <Reference Include="PerfEx.Infrastructure.Silverlight, Version=1.7910.1116.799, Culture=neutral, processorArchitecture=MSIL" />
+    <Reference Include="PerfEx.Infrastructure.Silverlight.Advanced, Version=1.7910.1116.799, Culture=neutral, processorArchitecture=MSIL" />
+    <Reference Include="Rhino.Mocks 3.5.Silverlight">
+      <HintPath>..\..\..\..\lib\Rhino.Mocks 3.5.Silverlight.dll</HintPath>
+    </Reference>
+    <Reference Include="SpecFlowAssist.Silverlight">
+      <HintPath>..\..\..\..\lib\SpecFlowAssist.Silverlight.dll</HintPath>
+    </Reference>
+    <Reference Include="System.CoreEx, Version=1.0.2698.204, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="System.Interactive, Version=1.0.2698.204, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="System.Observable, Version=1.0.0.204, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="System.Reactive, Version=1.0.2698.204, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Windows" />
     <Reference Include="mscorlib" />
     <Reference Include="system" />
@@ -86,11 +98,33 @@
     <Reference Include="System.Net" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Windows.Browser" />
+    <Reference Include="TechTalk.SpecFlow.Silverlight">
+      <HintPath>..\..\..\..\lib\TechTalk.SpecFlow.Silverlight.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MagicNine\Specs\GetActiveGameRound.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>GetActiveGameRound.feature</DependentUpon>
+    </Compile>
+    <Compile Include="MagicNine\Specs\GetGamePlayAutoBetInformation.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>GetGamePlayAutoBetInformation.feature</DependentUpon>
+    </Compile>
+    <Compile Include="MagicNine\Specs\GetListBetLog.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>GetListBetLog.feature</DependentUpon>
+    </Compile>
     <Compile Include="MagicNine\Specs\Silverlight\App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MagicNine\Specs\Steps\CommonSteps.cs" />
+    <Compile Include="MagicNine\Specs\Steps\GetActiveGameRoundStep.cs" />
+    <Compile Include="MagicNine\Specs\Steps\GetGamePlayAutoBetInformationStep.cs" />
+    <Compile Include="MagicNine\Specs\Steps\GetListBetLogStep.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -100,6 +134,19 @@
     </ApplicationDefinition>
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
+    <None Include="MagicNine\Specs\GetActiveGameRound.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>GetActiveGameRound.feature.cs</LastGenOutput>
+    </None>
+    <None Include="MagicNine\Specs\GetGamePlayAutoBetInformation.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>GetGamePlayAutoBetInformation.feature.cs</LastGenOutput>
+    </None>
+    <None Include="MagicNine\Specs\GetListBetLog.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>GetListBetLog.feature.cs</LastGenOutput>
+    </None>
     <None Include="Properties\AppManifest.xml" />
   </ItemGroup>
   <ItemGroup>
