แก้งานและเพิ่มการ Validation : MagicNine, แก้งานและเพิ่มการ Validation : PlayerAccount
Signed-off-by: sirinarin <sirinarin@perfenterprise.com>

--- a/src/CasinovaAll/Modules/MagicNine/TheS.Casinova.MagicNine.BackServices/TheS.Casinova.MagicNine.BackServices.csproj
+++ b/src/CasinovaAll/Modules/MagicNine/TheS.Casinova.MagicNine.BackServices/TheS.Casinova.MagicNine.BackServices.csproj
@@ -54,8 +54,10 @@
     <Compile Include="BackServices\BackExecutors\StartAutoBetExecutor.cs" />
     <Compile Include="BackServices\BackExecutors\StopAutoBetExecutor.cs" />
     <Compile Include="BackServices\IAutoBetEngine.cs" />
+    <Compile Include="BackServices\Validators\AutoBetInformation_StopAutoBetValidators.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Validators\UserProfileValidators.cs" />
+    <Compile Include="BackServices\Validators\UserProfile_SingleBetValidators.cs" />
+    <Compile Include="BackServices\Validators\UserProfile_StartAutoBetValidators.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
