--- a/src/CasinovaAll/Modules/PlayerProfile/TheS.Casinova.PlayerProfile.Commands/TheS.Casinova.PlayerProfile.Commands.csproj
+++ b/src/CasinovaAll/Modules/PlayerProfile/TheS.Casinova.PlayerProfile.Commands/TheS.Casinova.PlayerProfile.Commands.csproj
@@ -45,7 +45,7 @@
     <Compile Include="Commands\GetUserProfileCommand.cs" />
     <Compile Include="Commands\ListActionLogCommand.cs" />
     <Compile Include="Commands\RegisterUserCommand.cs" />
-    <Compile Include="Commands\VeriflyUserCommand.cs" />
+    <Compile Include="Commands\VerifyUserCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
