--- a/src/CasinovaAll/Specs/TheS.Casinova.Colors.WebExecutors.Specs/TheS.Casinova.Colors.WebExecutors.Specs.csproj
+++ b/src/CasinovaAll/Specs/TheS.Casinova.Colors.WebExecutors.Specs/TheS.Casinova.Colors.WebExecutors.Specs.csproj
@@ -123,6 +123,10 @@
       <Project>{886E0C88-2499-4DA9-98E2-253BDC0ABE5B}</Project>
       <Name>TheS.Casinova.Colors.BackServices.Contracts</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Modules\Colors\TheS.Casinova.Colors.BackServices\TheS.Casinova.Colors.BackServices.csproj">
+      <Project>{2D3ECC97-9634-412B-A816-7B5883718E14}</Project>
+      <Name>TheS.Casinova.Colors.BackServices</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Modules\Colors\TheS.Casinova.Colors.Commands\TheS.Casinova.Colors.Commands.csproj">
       <Project>{D96B565C-21E4-4D24-9084-B4E5B89A8AB4}</Project>
       <Name>TheS.Casinova.Colors.Commands</Name>
