--- a/src/CasinovaAll/Specs/TheS.Casinova.PlayerProfile.BackServices.Specs/TheS.Casinova.PlayerProfile.BackServices.Specs.csproj
+++ b/src/CasinovaAll/Specs/TheS.Casinova.PlayerProfile.BackServices.Specs/TheS.Casinova.PlayerProfile.BackServices.Specs.csproj
@@ -41,8 +41,14 @@
     <Reference Include="PerfEx.Infrastructure.Advanced">
       <HintPath>..\..\..\..\lib\PerfEx.Infrastructure.Advanced.dll</HintPath>
     </Reference>
+    <Reference Include="PerfEx.Infrastructure.Containers.StructureMapAdapter">
+      <HintPath>..\..\..\..\lib\PerfEx.Infrastructure.Containers.StructureMapAdapter.dll</HintPath>
+    </Reference>
     <Reference Include="Rhino.Mocks">
       <HintPath>..\..\..\..\lib\Rhino.Mocks.dll</HintPath>
+    </Reference>
+    <Reference Include="SpecFlowAssist">
+      <HintPath>..\..\..\..\lib\SpecFlowAssist.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
