--- a/src/CasinovaAll/Silverlight.Specs/TheS.Casinova.MagicNine.Specs.Silverlight/TheS.Casinova.MagicNine.Specs.Silverlight.csproj
+++ b/src/CasinovaAll/Silverlight.Specs/TheS.Casinova.MagicNine.Specs.Silverlight/TheS.Casinova.MagicNine.Specs.Silverlight.csproj
@@ -103,6 +103,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MagicNine\SpecEventDefinitions.cs" />
     <Compile Include="MagicNine\Specs\GetActiveGameRound.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
