--- a/src/CasinovaAll/Modules/PlayerAccount/TheS.Casinova.PlayerAccount.BackServices/TheS.Casinova.PlayerAccount.BackServices.csproj
+++ b/src/CasinovaAll/Modules/PlayerAccount/TheS.Casinova.PlayerAccount.BackServices/TheS.Casinova.PlayerAccount.BackServices.csproj
@@ -53,6 +53,9 @@
     <Compile Include="BackServices\BackExecutors\CancelPlayerAccountExecutor.cs" />
     <Compile Include="BackServices\BackExecutors\CreatePlayerAccountExecutor.cs" />
     <Compile Include="BackServices\BackExecutors\EditPlayerAccountExecutor.cs" />
+    <Compile Include="BackServices\Validators\PlayerAccountInfo_CreatePlayerAccountValidators.cs" />
+    <Compile Include="BackServices\Validators\PlayerAccountInfo_CancelPlayerAccountInfoValidators.cs" />
+    <Compile Include="BackServices\Validators\PlayerAccountInfo_EditPlayerAccountInfoValidators.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -60,6 +63,10 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <ProjectReference Include="..\..\PlayerProfile\TheS.Casinova.PlayerProfile.Models\TheS.Casinova.PlayerProfile.Models.csproj">
+      <Project>{96BBA83F-EAA6-4EEA-BEC5-98F6AC39B943}</Project>
+      <Name>TheS.Casinova.PlayerProfile.Models</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Shared\TheS.Casinova.Common.Commands\TheS.Casinova.Common.Commands.csproj">
       <Project>{B0BA601A-7B65-4973-9E00-4F9035883877}</Project>
       <Name>TheS.Casinova.Common.Commands</Name>
