edit video/ Comment_Archeivement
Signed-off-by: marut <>

--- a/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
+++ b/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
@@ -169,6 +169,8 @@
     <Content Include="Areas\Profile\Views\Profile\photocomment.ascx" />
     <Content Include="Areas\Profile\Views\Profile\Popup_Comment_Archeivement.ascx" />
     <Content Include="Areas\Profile\Views\Profile\Profile.aspx" />
+    <Content Include="Areas\Profile\Views\Profile\Report_Archeivement.ascx" />
+    <Content Include="Areas\Profile\Views\Profile\SeeAll_Archeivement.ascx" />
     <Content Include="Areas\Profile\Views\Profile\SubMenu.ascx" />
     <Content Include="Areas\Scholarship\Views\Scholarship\AdvanceSearch.ascx" />
     <Content Include="Areas\Scholarship\Views\Scholarship\Banners.ascx" />
@@ -182,6 +184,10 @@
     <Content Include="Content\galleria.css" />
     <Content Include="Content\images\1.png" />
     <Content Include="Content\images\2.png" />
+    <Content Include="Content\images\4.png" />
+    <Content Include="Content\images\5.png" />
+    <Content Include="Content\images\avartar_index.png" />
+    <Content Include="Content\images\calendar.gif" />
     <Content Include="Content\images\comment.png" />
     <Content Include="Content\images\e1.png" />
     <Content Include="Content\images\e2.png" />
@@ -215,15 +221,20 @@
     <Content Include="Content\jquery.ad-gallery.css" />
     <Content Include="Content\jquery.autocomplete.css" />
     <Content Include="Content\profile\1.jpg" />
+    <Content Include="Content\profile\1.png" />
     <Content Include="Content\profile\10.jpg" />
     <Content Include="Content\profile\11.jpg" />
     <Content Include="Content\profile\12.jpg" />
     <Content Include="Content\profile\13.jpg" />
     <Content Include="Content\profile\14.jpg" />
     <Content Include="Content\profile\2.jpg" />
+    <Content Include="Content\profile\2.png" />
     <Content Include="Content\profile\3.jpg" />
+    <Content Include="Content\profile\3.png" />
     <Content Include="Content\profile\4.jpg" />
+    <Content Include="Content\profile\4.png" />
     <Content Include="Content\profile\5.jpg" />
+    <Content Include="Content\profile\5.png" />
     <Content Include="Content\profile\6.jpg" />
     <Content Include="Content\profile\7.jpg" />
     <Content Include="Content\profile\8.jpg" />
