PlayerProfileModule: test case finish PlayerAccountModule: test case pending
Signed-off-by: Nittaya <nittaya@perfenterprise.com>

--- a/src/CasinovaAll/Modules/PlayerProfile/TheS.Casinova.PlayerProfile.Models/TheS.Casinova.PlayerProfile.Models.csproj
+++ b/src/CasinovaAll/Modules/PlayerProfile/TheS.Casinova.PlayerProfile.Models/TheS.Casinova.PlayerProfile.Models.csproj
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,7 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\ActionLog.cs" />
+    <Compile Include="Models\ActionLog.md.cs" />
     <Compile Include="Models\UserProfile.cs" />
+    <Compile Include="Models\UserProfile.md.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
