--- a/src/CasinovaAll/Modules/PlayerProfile/TheS.Casinova.PlayerProfile.WebExecutors/TheS.Casinova.PlayerProfile.WebExecutors.csproj
+++ b/src/CasinovaAll/Modules/PlayerProfile/TheS.Casinova.PlayerProfile.WebExecutors/TheS.Casinova.PlayerProfile.WebExecutors.csproj
@@ -47,6 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validators\UserProfile_ChangeEmailValidators.cs" />
+    <Compile Include="Validators\UserProfile_RegisterUserValidators.cs" />
     <Compile Include="WebExecutors\ChangeEmailExecutor.cs" />
     <Compile Include="WebExecutors\ChangePasswordExecutor.cs" />
     <Compile Include="WebExecutors\GetUserProfileExecutor.cs" />
