finish : แก้งานและเพิ่ม Validator ของ ChipExchange
Signed-off-by: sirinarin <sirinarin@perfenterprise.com>

--- a/src/CasinovaAll/Modules/ChipExchange/TheS.Casinova.ChipExchange.BackServices/TheS.Casinova.ChipExchange.BackServices.csproj
+++ b/src/CasinovaAll/Modules/ChipExchange/TheS.Casinova.ChipExchange.BackServices/TheS.Casinova.ChipExchange.BackServices.csproj
@@ -57,6 +57,11 @@
     <Compile Include="BackServices\Commands\PayExchangeCommand.cs" />
     <Compile Include="BackServices\IGenerateVoucherCode.cs" />
     <Compile Include="BackServices\IPayExchangeEngine.cs" />
+    <Compile Include="BackServices\Validators\ExchangeSettingInfo_MoneyToBonusChipsValidators.cs" />
+    <Compile Include="BackServices\Validators\ExchangeSettingInfo_MoneyToChipsValidators.cs" />
+    <Compile Include="BackServices\Validators\MLNInfo_MoneyToBonusChipsValidators.cs" />
+    <Compile Include="BackServices\Validators\UserProfile_PayVoucherValidators.cs" />
+    <Compile Include="BackServices\Validators\VoucherInfo_VoucherToBonusChipsValidators.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
