edit Magic9 StatisticsChartViewModel
Signed-off-by: Sakul Jaruthanaset <miolynet@perfenterprise.com>

--- a/src/CasinovaAll/Silverlights/TheS.Casinova.MagicNine.Silverlight/TheS.Casinova.MagicNine.Silverlight.csproj
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.MagicNine.Silverlight/TheS.Casinova.MagicNine.Silverlight.csproj
@@ -105,6 +105,7 @@
     <Compile Include="MagicNine\Models\BetdataInfo.cs" />
     <Compile Include="MagicNine\Models\BetLog.cs" />
     <Compile Include="MagicNine\Models\PayLog.cs" />
+    <Compile Include="MagicNine\Models\WinnerInfo.cs" />
     <Compile Include="MagicNine\Services\IMagicNineServiceAdapter.cs" />
     <Compile Include="MagicNine\Services\MagicNineServiceAdapter.cs" />
     <Compile Include="MagicNine\Silverlight\App.xaml.cs">
