commit and push for check source
Signed-off-by: sirinarin <sirinarin@perfenterprise.com>

--- a/src/CasinovaAll/Modules/ChipExchange/TheS.Casinova.ChipExchange.DAL.BackContracts/TheS.Casinova.ChipExchange.DAL.BackContracts.csproj
+++ b/src/CasinovaAll/Modules/ChipExchange/TheS.Casinova.ChipExchange.DAL.BackContracts/TheS.Casinova.ChipExchange.DAL.BackContracts.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Commands\GetUserProfileCommand.cs" />
     <Compile Include="Commands\GetVoucherInfoCommand.cs" />
     <Compile Include="Commands\UpdateUsedVoucherCommand.cs" />
+    <Compile Include="Commands\UpdateUserProfileCommand.cs" />
     <Compile Include="DAL\IChipExchangeDataAccess.cs" />
     <Compile Include="DAL\IChipExchangeDataBackQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
